--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -1,2 +1,3 @@
-<h1>Toppages#index</h1>
-<p>Find me in app/views/toppages/index.html.erb</p>
+
+    <h1>Tasklist</h1>
+    <%= link_to 'Sign up now!', signup_path %>
