--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,14 +1,27 @@
-<header>
-  <nav>
+<header class="mb-4"> 
+<nav class="navbar navbar-expand-sm navbar-dark bg-dark">
     <a href="/">Tasklist</a>
-    <button data-target="#navbarSupportedContent">
-      <span ></span>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
+       <span class="navbar-toggler-icon"></span> 
     </button>
+    
 
-    <div  id="navbarSupportedContent">
-      <ul>
-        <li ><a href="#" >Signup</a></li>
-        <li ><a href="#" >Login</a></li>
+     <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+      <ul class="navbar-nav">
+        <% if logged_in? %>
+          <li class="nav-item"><%= link_to 'Users', users_path, class: 'nav-link' %></li>
+          <li class="nav-item dropdown">
+            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown"><%= current_user.name %></a>
+            <ul class="dropdown-menu dropdown-menu-right">
+              <li class="dropdown-item"><%= link_to 'My profile', user_path(current_user) %></li>
+              <li class="dropdown-divider"></li>
+              <li class="dropdown-item">Logout</li>
+            </ul>
+          </li>
+        <% else %>
+          <li class="nav-item"><%= link_to 'Signup', signup_path, class: 'nav-link' %></li>
+          <li class="nav-item"><%= link_to 'Login', login_path, class: 'nav-link' %></li>
+        <% end %>
       </ul>
     </div>
   </nav>
