--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,3 +1,5 @@
+<%if logged_in?  %>
+
 <h1>タスク一覧</h1>
 
 <ul>
@@ -7,3 +9,8 @@
     
 　<%= link_to "タスクの新規作成" , new_task_path %>
 </ul>
+
+<% else %>
+
+  <%= render 'sessions/new' %>
+<% end %>
