--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,5 +1,17 @@
 <h1>タスク新規作成ページ</h1>
 
-<%= render 'form', task: @task %>
+<%= form_with(model: @task, local: true) do |f| %>
+  
+  <%= render 'layouts/error_messages', model: f.object %>
+  
+ <%= f.label :status, 'ステータス' %>
+  <%= f.text_field :status %>
+
+  <%= f.label :content, 'タスク内容' %>
+  <%= f.text_field :content %>
+
+  <%= f.submit '送信' %>
+<% end %>
+
 
 <%= link_to "タスク一覧に戻る", tasks_path %>
